fix alignement logement host

--- a/src/pages/Logement/Logement.css
+++ b/src/pages/Logement/Logement.css
@@ -36,8 +36,7 @@
   justify-content: center;
   gap: 0.3rem;
   text-align: center;
-  max-width: 100px;
-  margin: 0 auto;
+  max-width: 175px;
 }
 
 .logement-host .star-rating {
